business understanding continued 2

--- a/Inhalt/03_Verzeichnisse/abkuerzungen.tex
+++ b/Inhalt/03_Verzeichnisse/abkuerzungen.tex
@@ -18,6 +18,8 @@
 	\acro{NLP}{Natural Language Processing}
 	\acro{NLTK}{Natural Language Toolkit}
 	\acro{SEMMA}{Sample Explore Modify Model Assess}
+	\acro{SQL}{Short Query Language}
 	\acro{TF-IDF}{Term Frequency - Inverse Document Frequency}	
+
 
 \end{acronym}
