--- a/Inhalt/04_Inhalt/fundamentals.tex
+++ b/Inhalt/04_Inhalt/fundamentals.tex
@@ -1,13 +1,4 @@
-\chapter{Fundamentals}
-\section{Glossary of Terms}
-
-	\subparagraph{Clustering Algorithm} is a sequence of instructions, which arranges a set of instances into groups, which contain items of high similarity to each other.
-	\subparagraph{\ac{NLP}}is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
-	
-	\textcolor{red}{This is not yet completed, as the glossary of terms will be expanded while writing the thesis.}
-	
-
-\section{Corporate Environment}
+\chapter{Corporate Environment}
 
 	\subsection{Historical}
 	SAP was founded in 1972 by five ex-IBM employees. The original company name was "Systemanalyse Programmentwicklung", which can be translated to "System analysis and program development". In 1976, a second company, the SAP GmbH was founded, where the acronym SAP denoted "Systems, Applications and Products for data processing" \cite{GeschichteSAP1972}. The SAP GmbH is the company, which is today known as SAP SE. 
