--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -180,6 +180,14 @@
   file = {/Users/I518232/Zotero/storage/PL4PH5EP/Koch - The E-Invoicing Journey 2019-2025.pdf}
 }
 
+@misc{largeDataSetBrownlee,
+  title = {7 {{Ways}} to {{Handle Large Data Files}} for {{Machine Learning}}}
+}
+
+@misc{largeDataSetMedium,
+  title = {What to {{Do When Your Data Is Too Big}} for {{Your Memory}}?}
+}
+
 @misc{manualInvoiceProcessing,
   title = {It's Costing How Much? {{The}} Truth about Manual Invoice Processing},
   shorttitle = {It's Costing How Much?},
@@ -237,6 +245,11 @@
   title = {{{SAP SE Executive Board}}},
   journal = {SAP SE Corporate Governance},
   howpublished = {https://www.sap.com/investors/en/governance/executive-board.html}
+}
+
+@misc{scaleAI,
+  title = {{{ScaleAI}}},
+  howpublished = {https://scale.com/document-ai}
 }
 
 @misc{schmitzLeonardo,
