--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -59,6 +59,7 @@ To summarize both relevant data mining and business terminology, a glossary was 
 	\textcolor{red}{This is not yet completed, as the glossary of terms will be expanded while writing the thesis.}
 
 \subsection{Costs and benefits}
+	\textcolor{red}{Propably won't include this...}
 
 \section{Determine data mining goals}
 The following data mining goals were identified during the phase of business understanding:
@@ -78,6 +79,17 @@ The successful outcome is defined by reaching all named criteria. The achievment
 \subsection{Project Plan}
 
 \subsection{Initial assessment of tools and techniques}
+Programming Language
+- Python
+- R?
+- ??
+
+Development Environment
+
+Deployment
+
+
+
 
 
 
