--- a/Inhalt/04_Inhalt/content_dataset_selection.tex
+++ b/Inhalt/04_Inhalt/content_dataset_selection.tex
@@ -1,5 +1,5 @@
 \chapter{Dataset selection}
-\section{Selecting a dataset depending on the project type}
+\section{Choosing a dataset}
 	The dataset is the fundament of a data-science project. The quality, size and closeness to reality decide the degree to which the findings can be helpful for solving real problems. 
 	In this section, a classification for data-science projects is introduced.
 	
@@ -35,7 +35,7 @@
 	\subsection{Resulting Requirements for selecting a dataset}
 	In a data-first project, there is no assumption of patterns. This for once means that a large dataset is required to cover enough ground for accurate derivation of insights. Second, a data-first project does not require structured data \cite{srivastavaDataMining}. Instead, unstructured and semi-structured data is also applicable for data-first projects.
 	
-	\section{Selecting an appropriate data source}
+	\section{Choosing a data source}
 	\label{data-source}
 	
 	With the project type as a decisive factor for the dataset explained, the other evaluation criteria for the dataset is described. In the corporate environment two fundamental sources for data exist. 
