--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -220,6 +220,20 @@
   file = {/Users/I518232/Zotero/storage/T39ZUH2P/invoice-management.html}
 }
 
+@misc{pythonDocker,
+  title = {Python - {{Pfficial Image}} | {{DockerHub}}},
+  howpublished = {https://hub.docker.com/\_/python}
+}
+
+@misc{pythonVsR,
+  title = {Python vs. {{R}}: {{What}}'s the {{Difference}}?}
+}
+
+@misc{rDocker,
+  title = {R-Base - {{Official Image}}},
+  howpublished = {https://hub.docker.com/\_/r-base}
+}
+
 @article{robertsonTFIDF,
   title = {Understanding Inverse Document Frequency: {{On}} Theoretical Arguments for {{IDF}}},
   shorttitle = {Understanding Inverse Document Frequency},
@@ -239,6 +253,10 @@
   month = oct,
   journal = {SAP Community},
   howpublished = {https://blogs.sap.com/2021/10/11/the-journey-from-sap-leonardo-machine-learning-foundation-to-sap-ai-core-and-sap-ai-launchpad/}
+}
+
+@misc{RVsPythonJohnson,
+  title = {R {{Vs Python}}: {{What}}'s the {{Difference}}?}
 }
 
 @misc{SAPSEExecutive,
